[project]
name = "self_healing_agent"
version = "0.1.0"
description = "AI agent for self-healing Java Spring Boot apps"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"

dependencies = [
    "google-adk>=1.0.0",
    "langchain",
    "openai",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "aiohttp",
    "pydantic",
    "httpx",
    "requests",
    "mcp>=1.9.1",
    "jira",
    "GitPython"
]

[tool.adk]
root-agent = "self_healing_agent.main_agent:root_agent"
description = "Root agent responsible for orchestrating the self-healing pipeline."

[tool.setuptools.packages.find]
where = ["."]a
include = ["self_healing_agent*"]

[project.scripts]
software_bug_assistant = "self_healing_agent.main_agent:main"
